--- a/Topic 12 - Databases and creating an API - Student Sign In at Azure/Lab/student_sign_in_express/config.json
+++ b/Topic 12 - Databases and creating an API - Student Sign In at Azure/Lab/student_sign_in_express/config.json
@@ -10,6 +10,6 @@
                 "dialect": "mssql",
                 "dialectOptions": {
                         "ssl": {
-                                "require": true,
-                                "rejectUnauthorized": false
+                                "require": "true",
+                                "rejectUnauthorized": "false"
                         }}}}
