--- a/Topic 12 - Databases and creating an API - Student Sign In at Azure/Lab/student_sign_in_express/config.json
+++ b/Topic 12 - Databases and creating an API - Student Sign In at Azure/Lab/student_sign_in_express/config.json
@@ -4,9 +4,9 @@
                 "dialect": "sqlite"
 },
         "production": {
-                "username": "YOUR_USERNAME",
-                "host":"YOUR_DATABASE_SERVER.database.windows.net",
-                "database": "YOUR_DATABASE",
+                "username": "jon",
+                "host":"student-sign-in-db-jonkoch.database.windows.net",
+                "database": "student-sign-in-db",
                 "dialect": "mssql",
                 "dialectOptions": {
                         "ssl": {
